--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -176,21 +176,24 @@
 
                 </table>
             </div>
-            <br></br>
 
-            To assess what portion of the exon(s) have sub-optimal coverage, the plots below display 
-            an interactive window on hovering, showing the coverage at that current base.<br>
-            The top right also contains a toolbar, with functions such as panning and zooming.
+            <div id="low_exon_plots">
+                <br></br>
 
-            <br></br><br></br>
-            <!-- table for low exon plots -->
-            <table id="low_plots_grid" style="display: none;" width="100%">
-                <thead>
-                  <tr>
-                      <th>Plot</th>
-                  </tr>
-                </thead>
-            </table>
+                To assess what portion of the exon(s) have sub-optimal coverage, the plots below display 
+                an interactive window on hovering, showing the coverage at that current base.<br>
+                The top right also contains a toolbar, with functions such as panning and zooming.
+
+                <br></br>
+                <!-- table for low exon plots -->
+                <table id="low_plots_grid" style="display: none;" width="100%">
+                    <thead>
+                    <tr>
+                        <th>Plot</th>
+                    </tr>
+                    </thead>
+                </table>
+            </div>
 
             <br></br><hr><br></br>
 
@@ -334,6 +337,8 @@
         </div>
     </body>
 
+    <!-- JS functions -->
+
     <!-- DataTables function for full plots -->
     <script type="text/javascript" class="init">
         $(document).ready(function() {
@@ -371,7 +376,6 @@
             });
         });
     </script>
-
 
 
     <!-- DataTables function for calling plotly for low exon plots -->
@@ -553,6 +557,16 @@
         var snp_check = $total_snps
         if (snp_check == 0) { 
         document.getElementById('snps').style.display = "none";  
+        }
+    </script>
+
+
+    <!-- function to conditionally hide low exon plots div if no plots to display -->
+    <script>
+        // $exon_issues is int passed from report script
+        var exon_check = $exon_issues
+        if (exon_check == 0) { 
+        document.getElementById('low_exon_plots').style.display = "none";  
         }
     </script>
 
