--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -327,6 +327,16 @@
                 </br></br>
             </div>
         </div>
+
+        <!-- Optional section displaying coverage per chromosome, if required -->
+        <div id="coverage_per_chromosome">
+            <h2>Coverage per chromosome</h2> 
+
+            $coverage_per_chromosome_fig
+
+            <!--    <br></br><hr><br></br> -->
+        </div>
+
         <div class="card-footer bg-info p-1 text-white" style="display: flex; justify-content: space-between; align-items: baseline">
             <span>
                 &nbsp&nbsp Report generated on $date
@@ -352,12 +362,21 @@
     <!-- function to conditionally hide low exon plots div if no plots to display -->
     <script>
         // $exon_issues is int passed from report script
-        var exon_check = $exon_issues
+        var coverage_per_chromosome_fig = $coverage_per_chromosome_fig
+        if (coverage_per_chromosome_fig == 0) { 
+            document.getElementById('coverage_per_chromosome').style.display = "none";  
+        }
+    </script>
+
+    
+    <!-- function to conditionally hide coverage-per-chromosome div if not required -->
+    <script>
+        // $exon_issues is int passed from report script
+        var cov  = $exon_issues
         if (exon_check == 0) { 
             document.getElementById('low_exon_plots').style.display = "none";  
         }
     </script>
-
 
     <!-- function to make sections collapsible -->
     <script>
