enabled horizontal header scrolling in DataTables

--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -387,9 +387,10 @@
             $('#fullPlots').DataTable( {
                 data:           data,
                 deferRender:    true,
-                pageResize: true,
-                info:       false, 
+                pageResize:     true,
+                info:           false, 
                 scrollY:        "75vh",
+                scrollX:        true,
                 scrollCollapse: true,
                 scroller:       true,
                 scroller: {
@@ -631,6 +632,7 @@
                 data:           data,
                 deferRender:    true,
                 scrollY:        500,
+                scrollX:        true,
                 scrollCollapse: true,
                 scroller:       true,
                 columns: columnDefs,
@@ -655,6 +657,7 @@
                 data:           data,
                 deferRender:    true,
                 scrollY:        500,
+                scrollX:        true,
                 scrollCollapse: true,
                 scroller:       true,
                 scroller: {
@@ -678,6 +681,7 @@
                 data:           data,
                 deferRender:    true,
                 scrollY:        500,
+                scrollX:        true,
                 scrollCollapse: true,
                 scroller:       true,
                 scroller: {
@@ -709,6 +713,7 @@
                 data:           data,
                 deferRender:    true,
                 scrollY:        500,
+                scrollX:        true,
                 scrollCollapse: true,
                 scroller:       true,
                 scroller: {
@@ -740,6 +745,7 @@
                 data:           data,
                 deferRender:    true,
                 scrollY:        600,
+                scrollX:        true,
                 scrollCollapse: true,
                 scroller:       true,
                 scroller: {
@@ -770,6 +776,7 @@
                 data:           data,
                 deferRender:    true,
                 scrollY:        600,
+                scrollX:        true,
                 scrollCollapse: true,
                 scroller:       true,
                 scroller: {
