--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -133,19 +133,20 @@
                 <li> Table of per exon coverage across all genes.</li>
                 <li> Coverage of known variants (if specified).</li><br>
                 n.b. all coverage plots are displayed relative to the <b>+ strand</b>.
-            </ul>    
+            </ul>
             </p>
         </div>
 
         <!-- Main body of report  -->
         <div class="card-body bg-white">
             <!--  Summary section -->
-            <h2>Summary</h2> 
+            <h2>Summary</h2>
             <ul style="font-size:20px; line-height:2.0;">
                 <!-- Include reference build if given -->
                 $build
                 $panel
                 <li>Genes in the applied panel(s): <b>$total_genes</b></li>
+                <li>Total selected transcripts: <b>$total_transcripts</b></li>
                 <li>Low coverage threshold: < <b>$threshold</b></li>
                 <li>Panel coverage at $threshold: <b>$panel_pct_coverage %</b></li>
                 <li>Genes with 100% coverage at $threshold: <b>$fully_covered_genes</b></li>
@@ -162,11 +163,11 @@
             $summary_plot
 
             <br></br><hr><br></br>
-        
+
             <!-- Low covered exons table and plots -->
             <h2>Exons with &lt;100% coverage at $threshold</h2>
             <p style="font-size:18px">
-                Of the <b>$total_genes</b> genes included in the panel, <b>$exon_issues</b> exons in 
+                Of the <b>$total_genes</b> genes (<b>$total_transcripts</b> transcripts) included in the panel, <b>$exon_issues</b> exons in
                 <b>$gene_issues</b> genes had sub optimal-coverage.
             </p>
 
@@ -180,7 +181,7 @@
             <div id="low_exon_plots">
                 <br></br>
 
-                To assess what portion of the exon(s) have sub-optimal coverage, the plots below display 
+                To assess what portion of the exon(s) have sub-optimal coverage, the plots below display
                 an interactive window on hovering, showing the coverage at that current base.<br>
                 The top right also contains a toolbar, with functions such as panning and zooming.
 
@@ -249,10 +250,10 @@
 
             <!-- Optional section for displaying SNP information if generated -->
             <div id="snps">
-                
+
                 <h2> Coverage of Known Variants </h2>
                 <br>
-                Below are tables giving coverage of known variants. The low coverage table gives those not covered at $threshold, 
+                Below are tables giving coverage of known variants. The low coverage table gives those not covered at $threshold,
                 and the high coverage table contains those covered above $threshold. <br></br>
 
                 <li><b>$total_snps</b> variants were within the given panel regions and included for analysis</li>
@@ -364,8 +365,8 @@
     <script>
         // $total_snps is int passed from report script, set to JS snp_check var on writing to template to check against
         var snp_check = $total_snps
-        if (snp_check == 0) { 
-            document.getElementById('snps').style.display = "none";  
+        if (snp_check == 0) {
+            document.getElementById('snps').style.display = "none";
         }
     </script>
 
@@ -374,8 +375,8 @@
     <script>
         // $exon_issues is int passed from report script
         var cov  = $exon_issues
-        if (exon_check == 0) { 
-            document.getElementById('low_exon_plots').style.display = "none";  
+        if (exon_check == 0) {
+            document.getElementById('low_exon_plots').style.display = "none";
         }
     </script>
 
@@ -384,8 +385,8 @@
     <script>
         // $coverage_per_chromosome_fig is either int or string passed from report script
         var coverage_per_chromosome_fig = $coverage_per_chromosome_fig
-        if (coverage_per_chromosome_fig == 0) { 
-            document.getElementById('coverage_per_chromosome').style.display = "none";  
+        if (coverage_per_chromosome_fig == 0) {
+            document.getElementById('coverage_per_chromosome').style.display = "none";
         }
     </script>
 
@@ -403,7 +404,7 @@
                     content.style.maxHeight = null;
             } else {
                 content.style.maxHeight = content.scrollHeight * 2 + "px";
-            } 
+            }
         });
         }
     </script>
@@ -418,7 +419,7 @@
                 data:           data,
                 deferRender:    true,
                 pageResize:     true,
-                info:           false, 
+                info:           false,
                 scrollY:        "75vh",
                 scrollX:        true,
                 scrollCollapse: true,
@@ -469,9 +470,9 @@
         // data passed in as an array with plot title, coordinates and coverage values
         var data = [ $low_cov_plots ];
 
-        // plotly layout properties  
+        // plotly layout properties
         let layout = {
-            hovermode:'closest',        
+            hovermode:'closest',
             title: "",
             showlegend: false,
             plot_bgcolor: '#f7fbfd',
@@ -530,9 +531,9 @@
                 // function to create responsive container over dataTable for adding plots to
                 if(gridview == 1) {
                     // create an empty plot container, put it in the dataTables_scrollBody div
-                        if ($('#plot_container').length < 1) { 
-                            $('.dataTables_scrollBody').append('<div id="plot_container"></div>'); 
-                        } 
+                        if ($('#plot_container').length < 1) {
+                            $('.dataTables_scrollBody').append('<div id="plot_container"></div>');
+                        }
                         $('#plot_container').html('');
 
                 return true;
@@ -541,7 +542,7 @@
 
             "rowCallback": function( nRow, data, iDisplayIndex, iDisplayIndexFull ) {
             // function to add data from array into container
-                if(gridview == 1) {  
+                if(gridview == 1) {
                     $('#plot_container').append(data);
                 }
                 return nRow
@@ -680,7 +681,7 @@
     </script>
 
     <!-- DataTables function for gene coverage table -->
-    <script type="text/javascript" class="init">	
+    <script type="text/javascript" class="init">
         $(document).ready(function() {
             var data = $gene_stats ;
             $('#gene_table').DataTable( {
@@ -703,10 +704,10 @@
     </script>
 
     <!-- DataTables function for exon coverage table -->
-    <script type="text/javascript" class="init">	
+    <script type="text/javascript" class="init">
         $(document).ready(function() {
             var data = $total_stats ;
-            
+
             $('#exon_table').DataTable( {
                 data:           data,
                 deferRender:    true,
